trustfall_core/test_data/tests/valid_queries/transform_with_tagged_self_argument.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    One {
        value
            @tag
            @transform(op: "+", value: ["%value"])
            @tag(name: "transformed")
            @output
            @transform(op: "+", value: ["%transformed"])
            @filter(op: "!=", value: ["%transformed"])
            @output
    }
}"#,
    arguments: {},
)
