trustfall_core/test_data/tests/parse_errors/tag_name_with_multiple_invalid_chars.graphql.ron
TestGraphQLQuery (
    schema_name: "filesystem",
    query: r#"
{
    OriginDirectory {
        name @tag(name: "name with-various $%^&# chars!") @output

        out_Directory_ContainsFile {
            name @filter(op: "has_substring", value: ["%name with-various $%^&# chars!"])
        }
    }
}"#,
    arguments: {},
)
